This is my final website! :)
- Everything is completed and validated

--- a/about.html
+++ b/about.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/Master Template.dwt" codeOutsideHTMLIsLocked="false" -->
+<html xmlns="http://www.w3.org/1999/xhtml">
+<!-- InstanceBegin template="/Templates/Master Template.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Untitled Document</title>
+<title>What is Chocolate Y</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
@@ -27,18 +28,18 @@
 		<div class="content">
 			<!-- InstanceBeginEditable name="content" -->
 			<h2><em>What is Chocolate You Say?</em></h2>
-			<p><img src="Images/watischoc.jpg" width="279" height="337" alt="watischoc" longdesc="Images/watischoc.jpg" /></p>
-			<p>Chocolate is a raw or processed food produced from the seed of the tropical Theobroma cacao tree. Cacao has been cultivated for at least three millennia in Mexico, Central America and Northern South America. Its earliest documented use is around 1100 BC. The majority of the Mesoamerican people made chocolate beverages, including the Aztecs, who made it into a beverage known as xocolatl, a Nahuatl word meaning &quot;bitter water&quot;. The seeds of the cacao tree have an intense bitter taste, and must be fermented to develop the flavor.</p>
-			<p>After fermentation, the beans are dried, then cleaned, and then roasted, and the shell is removed to produce cacao nibs. The nibs are then ground to cocoa mass, pure chocolate in rough form. Because this cocoa mass usually is liquefied then molded with or without other ingredients, it is called chocolate liquor. The liquor also may be processed into two components: cocoa solids and cocoa butter. Unsweetened baking chocolate (bitter chocolate) contains primarily cocoa solids and cocoa butter in varying proportions. Much of the chocolate consumed today is in the form of sweet chocolate, combining cocoa solids, cocoa butter or other fat, and sugar. Milk chocolate is sweet chocolate that additionally contains milk powder or condensed milk. White chocolate contains cocoa butter, sugar, and milk but no cocoa solids.</p>
+			<p><img src="Images/watischoc.jpg" alt="watischoc" width="279" height="337" align="left" longdesc="Images/watischoc.jpg" />Chocolate is a raw or processed food produced from the seed of the tropical Theobroma cacao tree. Cacao has been cultivated for at least three millennia in Mexico, Central America and Northern South America. Its earliest documented use is around 1100 BC. The majority of the Mesoamerican people made chocolate beverages, including the Aztecs, who made it into a beverage known as xocolatl, a Nahuatl word meaning &quot;bitter water&quot;. The seeds of the cacao tree have an intense bitter taste, and must be fermented to develop the flavor.</p>
+			<p>After fermentation, the beans are dried, then cleaned, and then roasted, and the shell is removed to produce cacao nibs. The nibs are then ground to cocoa mass, pure chocolate in rough form. Because this cocoa mass usually is liquefied then molded with or without other ingredients, it is called chocolate liquor. The liquor also may be processed into two components: cocoa solids and cocoa butter. Unsweetened baking chocolate (bitter chocolate) contains primarily cocoa solids and cocoa butter in varying proportions. Much of the chocolate consumed today is in the form of sweet </p>
+			<p>chocolate, combining cocoa solids, cocoa butter or other fat, and sugar. Milk chocolate is sweet chocolate that additionally contains milk powder or condensed milk. White chocolate contains cocoa butter, sugar, and milk but no cocoa solids.</p>
 			<p>Cocoa solids contain alkaloids such as theobromine and phenethylamine, which have physiological effects on the body. It has been linked to serotonin levels in the brain. Some research found that chocolate, eaten in moderation, can lower blood pressure. The presence of theobromine renders chocolate toxic to some animals,especially dogs and cats.</p>
 			<p>Chocolate has become one of the most popular food types and flavors in the world. Gifts of chocolate molded into different shapes have become traditional on certain holidays: chocolate bunnies and eggs are popular on Easter, chocolate coins on Hanukkah, Santa Claus and other holiday symbols on Christmas, and chocolate hearts or chocolate in heart-shaped boxes on Valentine's Day. Chocolate is also used in cold and hot beverages, to produce chocolate milk and hot chocolate.</p>
 			<p>Cocoa mass was used originally in Mesoamerica both as a beverage and as an ingredient in foods. Chocolate played a special role in both Maya and Aztec royal and religious events. Priests presented cacao seeds as offerings to the deities and served chocolate drinks during sacred ceremonies. All of the areas that were conquered by the Aztecs that grew cacao beans were ordered to pay them as a tax, or as the Aztecs called it, a &quot;tribute&quot;.</p>
 			<p>The Europeans sweetened and fattened it by adding refined sugar and milk, two ingredients unknown to the Mexicans. By contrast, the Europeans never infused it into their general diet, but have compartmentalized its use to sweets and desserts. In the 19th century, Briton John Cadbury developed an emulsification process to make solid chocolate, creating the modern chocolate bar. Although cocoa is originally from the Americas, today Western Africa produces almost two-thirds of the world's cocoa, with Côte d'Ivoire growing almost half of it.</p>
-			<p>&nbsp;</p>
 			<!-- InstanceEndEditable -->
 		</div>
 		<div class="footer">
 		</div>
 	</div>
 </body>
-<!-- InstanceEnd --></html>
+<!-- InstanceEnd -->
+</html>
