--- a/dark-chocolate.html
+++ b/dark-chocolate.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/Master Template.dwt" codeOutsideHTMLIsLocked="false" -->
+<html xmlns="http://www.w3.org/1999/xhtml">
+<!-- InstanceBegin template="/Templates/Master Template.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Untitled Document</title>
+<title>Dark Chocolate</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
@@ -35,8 +36,7 @@
 			<p>A medium-sized bar from a leading chocolate company contains 180 calories and 21 grams of sugar. It has 2 grams of protein and 12 grams of fat, of which 8 grams are saturated fat. However, the calorie and fat content can differ between brands; some dark chocolate bars contain 200 to 250 calories, and 17 to 24 grams of fat per serving.</p>
 			<p>Dark chocolate contains the fats: oleic acid, palmitic acid and stearic acid. Oleic acid is a mono-unsaturated fat, the wholesome kind present in olive oil. Palmitic acid is a saturated fat that tends to raise low density lipoprotein (LDL) cholesterol. Stearic acid is a saturated fat that does not increase or decrease cholesterol levels.</p>
 			<p>Compare the cocoa, calorie and fat content of a few brands, as nutritional facts of dark chocolate products vary. Look out for ingredients such as nougat and caramel that add to the calories. When buying dark chocolate it is better to choose the plain kind, or one with almonds, preferably with 70% or higher cocoa content.</p>
-			<p><br>
-			</p>
+			<p> </p>
 			<div class="navigation">
 				<table cellpadding="15" cellspacing="15">
 					<tr>
@@ -54,4 +54,5 @@
 		</div>
 	</div>
 </body>
-<!-- InstanceEnd --></html>
+<!-- InstanceEnd -->
+</html>
