--- a/fun-facts.html
+++ b/fun-facts.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/Master Template.dwt" codeOutsideHTMLIsLocked="false" -->
+<html xmlns="http://www.w3.org/1999/xhtml">
+<!-- InstanceBegin template="/Templates/Master Template.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Untitled Document</title>
+<title>Did You Know?</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
@@ -27,8 +28,7 @@
 		<div class="content">
 			<!-- InstanceBeginEditable name="content" -->
 			<h2><em><strong>Did You Know?</strong></em></h2>
-			<p><img src="Images/diduknow.jpg" width="284" height="423" alt="diduknow" longdesc="Images/diduknow.jpg" /></p>
-			<p>1. The first recorded “Death by Chocolate” case occurred in the 17th Century in Chiapas, Mexico.  Upper class Spaniards were so addicted to chocolate that they refused to adhere to a church dictated chocolate ban that forbade them from eating or drinking any food during the church services.  As a result, the people of the town refused not only listen to the ban but chose to attend worship services in convents instead.  The Bishop who passed the law was later found dead due to poison being mixed into his daily cup of chocolate.</p>
+			<p><img src="Images/diduknow.jpg" alt="diduknow" width="284" height="423" align="left" longdesc="Images/diduknow.jpg" />1. The first recorded “Death by Chocolate” case occurred in the 17th Century in Chiapas, Mexico.  Upper class Spaniards were so addicted to chocolate that they refused to adhere to a church dictated chocolate ban that forbade them from eating or drinking any food during the church services.  As a result, the people of the town refused not only listen to the ban but chose to attend worship services in convents instead.  The Bishop who passed the law was later found dead due to poison being mixed into his daily cup of chocolate.</p>
 			<p>2. The word “chocolate” comes from the Aztec word, “Xocolatl”, which ironically means “bitter water”.</p>
 			<p>3. The biggest bar of chocolate ever made was created in 2000 and weighed 5,000 pounds.  Turin is the city in Italy that can be proud of this accomplishment.</p>
 			<p>4. Americans eat an average of 22 pounds of candy each year, or approximately 2.8 billion pounds annually which is split almost equally between chocolate and candy.  Most Europeans consume far less than this.</p>
@@ -45,4 +45,5 @@
 		</div>
 	</div>
 </body>
-<!-- InstanceEnd --></html>
+<!-- InstanceEnd -->
+</html>
