--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/Master Template.dwt" codeOutsideHTMLIsLocked="false" -->
+<html xmlns="http://www.w3.org/1999/xhtml">
+<!-- InstanceBegin template="/Templates/Master Template.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Untitled Document</title>
+<title>Chocolate!!!</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
@@ -26,11 +27,14 @@
 		</div>
 		<div class="content">
 			<!-- InstanceBeginEditable name="content" -->
-			<p>Hello. I am placeholder content.</p>
+			<h1> Welcome To My Awesome Website About Chocolate! </h1>
+			<p><img src="Images/differentypesofchoc.jpg" alt="difftypesofchoc" width="930" height="300" align="middle" longdesc="Images/differentypesofchoc.jpg" /></p>
+			<p>Here, all of you chocolate lovers will find out about all the wonderful things chocolate can offer you. Learn more about the different types of chocolates that exist, some delicious recipes that you can make with chocolate, engage in some interesting facts, and visit a few of the chocolate restaurants in New York City! Feel free to enlighten yourselves with this cool website! :) </p>
 			<!-- InstanceEndEditable -->
 		</div>
 		<div class="footer">
 		</div>
 	</div>
 </body>
-<!-- InstanceEnd --></html>
+<!-- InstanceEnd -->
+</html>
