--- a/types-of-chocolates.html
+++ b/types-of-chocolates.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Untitled Document</title>
+<title>How Many Types of Chocolates?</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
@@ -32,15 +32,16 @@
 			<p><img src="Images/howmany.jpg" width="917" height="379" alt="howmany" longdesc="Images/howmany.jpg" /></p>
 			<p>&nbsp;</p>
 			<div class="navigation">
-			<table cellpadding="15" cellspacing="15">
-				<tr>
-					<td bgcolor="#66FFCC"><a href="white-chocolate.html">White Chocolate</a></td>
-					<td bgcolor="#66FFCC"><a href="milk-chocolate.html">Milk Chocolate</a></td>
-					<td bgcolor="#66FFCC"><a href="unsweetened-chocolate.html">Unsweetened Chocolate</a></td>
-					<td bgcolor="#66FFCC"><a href="gianduja-chocolate.html">Gianduja Chocolate</a></td>
-					<td bgcolor="#66FFCC"><a href="dark-chocolate.html">Dark Chocolate</a></td>
-				</tr>
-			</table>
+				<table cellpadding="15" cellspacing="15">
+					<tr>
+						<td bgcolor="#66FFCC"><a href="white-chocolate.html">White Chocolate</a></td>
+						<td bgcolor="#66FFCC"><a href="milk-chocolate.html">Milk Chocolate</a></td>
+						<td bgcolor="#66FFCC"><a href="unsweetened-chocolate.html">Unsweetened Chocolate</a></td>
+						<td bgcolor="#66FFCC"><a href="gianduja-chocolate.html">Gianduja Chocolate</a></td>
+						<td bgcolor="#66FFCC"><a href="dark-chocolate.html">Dark Chocolate</a></td>
+					</tr>
+				</table>
+			</div>
 			<!-- InstanceEndEditable -->
 		</div>
 		<div class="footer">
