--- a/chocolate-molten-lava-cake.html
+++ b/chocolate-molten-lava-cake.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/Master Template.dwt" codeOutsideHTMLIsLocked="false" -->
+<html xmlns="http://www.w3.org/1999/xhtml">
+<!-- InstanceBegin template="/Templates/Master Template.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Untitled Document</title>
+<title>Chocolate Molten Lava Cake</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
@@ -42,19 +43,20 @@
 			<p>Preheat oven to 425 degrees F.</p>
 			<p>Grease 6 (6-ounce) custard cups. Melt the chocolates and butter in the microwave, or in a double boiler. Add the flour and sugar to chocolate mixture. Stir in the eggs and yolks until smooth. Stir in the vanilla and orange liqueur. Divide the batter evenly among the custard cups. Place in the oven and bake for 14 minutes. The edges should be firm but the center will be runny. Run a knife around the edges to loosen and invert onto dessert plates.<br />
 			</p>
-			<p>&nbsp;</p>
 			<div class="navigation">
-			<table cellpadding="35" cellspacing="35">
-				<tr>
-					<td bgcolor="#66FFCC"><a href="chocolate-molten-lava-cake.html">Chocolate Molten lava Cake</a></td>
-					<td bgcolor="#66FFCC"><a href="chocolate-chip-cookies.html">Chocolate Chip Cookies</a></td>
-					<td bgcolor="#66FFCC"><a href="homemade-chocolate-pudding.html">Homemade Chocolate Pudding</a></td>
-				</tr>
-			</table>
+				<table cellpadding="35" cellspacing="35">
+					<tr>
+						<td bgcolor="#66FFCC"><a href="chocolate-molten-lava-cake.html">Chocolate Molten lava Cake</a></td>
+						<td bgcolor="#66FFCC"><a href="chocolate-chip-cookies.html">Chocolate Chip Cookies</a></td>
+						<td bgcolor="#66FFCC"><a href="homemade-chocolate-pudding.html">Homemade Chocolate Pudding</a></td>
+					</tr>
+				</table>
+			</div>
 			<!-- InstanceEndEditable -->
 		</div>
 		<div class="footer">
 		</div>
 	</div>
 </body>
-<!-- InstanceEnd --></html>
+<!-- InstanceEnd -->
+</html>
