--- a/chocolate-recipes.html
+++ b/chocolate-recipes.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/Master Template.dwt" codeOutsideHTMLIsLocked="false" -->
+<html xmlns="http://www.w3.org/1999/xhtml">
+<!-- InstanceBegin template="/Templates/Master Template.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Untitled Document</title>
+<title>Chocolate Recipes</title>
 <!-- InstanceEndEditable -->
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
@@ -27,20 +28,22 @@
 		<div class="content">
 			<!-- InstanceBeginEditable name="content" -->
 			<h2><em>Yummy Chocolate Recipes!</em></h2>
-			<p><img src="Images/recipesss.jpg" width="470" height="320" alt="recipess" longdesc="Images/recipesss.jpg" />  <img src="Images/keepcalmand.jpg" width="467" height="317" alt="keepcalm" longdesc="Images/keepcalmand.jpg" /></p>
+			<p><img src="Images/recipesss.jpg" width="425" height="322" alt="recipess" longdesc="Images/recipesss.jpg" /> <img src="Images/keepcalmand.jpg" width="418" height="317" alt="keepcalm" longdesc="Images/keepcalmand.jpg" /></p>
 			<p>If you are looking for some delicious chocolate recipes, click on the links below to guide you:</p>
 			<div class="navigation">
-			<table cellpadding="35" cellspacing="35">
-				<tr>
-					<td bgcolor="#66FFCC"><a href="chocolate-molten-lava-cake.html">Chocolate Molten lava Cake</a></td>
-					<td bgcolor="#66FFCC"><a href="chocolate-chip-cookies.html">Chocolate Chip Cookies</a></td>
-					<td bgcolor="#66FFCC"><a href="homemade-chocolate-pudding.html">Homemade Chocolate Pudding</a></td>
-				</tr>
-			</table>
+				<table cellpadding="35" cellspacing="35">
+					<tr>
+						<td bgcolor="#66FFCC"><a href="chocolate-molten-lava-cake.html">Chocolate Molten lava Cake</a></td>
+						<td bgcolor="#66FFCC"><a href="chocolate-chip-cookies.html">Chocolate Chip Cookies</a></td>
+						<td bgcolor="#66FFCC"><a href="homemade-chocolate-pudding.html">Homemade Chocolate Pudding</a></td>
+					</tr>
+				</table>
+			</div>
 			<!-- InstanceEndEditable -->
 		</div>
 		<div class="footer">
 		</div>
 	</div>
 </body>
-<!-- InstanceEnd --></html>
+<!-- InstanceEnd -->
+</html>
